@@ -6,9 +6,10 @@ import jakarta.validation.constraints.NotBlank;
 import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import com.example.jwt_demo.model.enums.Role;
 import java.time.LocalDateTime;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Entity
 @Table(name = "users")
@@ -35,6 +36,9 @@ public class User implements UserDetails {
     @NotBlank
     @Column(nullable = false)
     private String password;
+    @Enumerated(EnumType.STRING)
+    @Column(nullable = false)
+    private Role role;
 
     @Column(name = "created_at", nullable = false)
     private LocalDateTime createdAt;
@@ -44,11 +48,9 @@ public class User implements UserDetails {
         this.createdAt = LocalDateTime.now();
     }
 
-    // Implementación de métodos de UserDetails
-
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // sin roles
+        return List.of(() -> role.name());
     }
 
     @Override
